# JNINativeLib

./: README.md  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/gabodev/jninativelib/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  NaturalSum.cpp
app/src/main/java/com/gabodev/jninativelib/: JniExample.kt  MainActivity.kt
app/src/main/java/com/gabodev/jninativelib/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/gabodev/jninativelib/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
